# makekit

./: CMakeLists.txt  CROSSCOMPILE.md  INTEGRATION.md  LICENSE  LICENSE.txt  MANUAL.md  README.md  custom_builds.cmake  custom_builds.cmake.txt
Windows/: README  README.md  addpath.ps1  build.bat  install.bat  make.bat  mk.bat  mk.txt  mk_build.bat  mk_clean.bat  mk_config.bat  mk_make.bat  mk_reconfig.bat  mk_refresh.bat  mk_remake.bat  winsdk_version.bat
Windows/llvm-openmp/lib/: libompd.ilk
cmake/: MakeKit.cmake  mk.cmake
cmake/libraries/: Boost.cmake  OpenCL.cmake  OpenGL.cmake  OpenMP.cmake  Qt.cmake  Vulkan.cmake
cmake/modules/: Boost.cmake  DeployQt5.cmake  InstallMK.cmake  InstallQt.cmake  OpenCL.cmake  OpenGL.cmake  OpenMP.cmake  Qt.cmake  Vulkan.cmake  mk_config.cmake  mk_defs.cmake  mk_file.cmake  mk_install.cmake  mk_target.cmake
cmake/templates/: CMakeLists.txt  CustomBuilds.cmake
cmake/toolchains/: auto.native.toolchain.cmake  cross.settings.cmake  cross.toolchain.cmake  linux_x86_64.cmake  llvm.darwin.x86_64.toolchain.cmake  llvm.linux.x86_64.toolchain.cmake  llvm.macos.x86_64.toolchain.cmake  llvm.native.toolchain.cmake  llvm.toolchain.cmake  llvm.windows.x86_64.cmake  macos-x86_64.cmake  toolchain-linux-x86_64.cmake  toolchain-macos-x86_64.cmake  toolchain-native.cmake  toolchain-windows-x86_64.cmake  toolchain.cmake  toolchain.inl.cmake  windows_x86_64.cmake
install/Linux/: install.sh
install/Windows/: Find VS.txt  build_llvm_from_source.bat  compile_mk.bat  export_path.ps1  find_vsdevcmd.bat  install.bat  install_buildtools.bat  install_llvm.txt  install_llvm_from_source.txt  vcbuild.cmd  vcdevcmd.cmd  vsdevcmd.bat  vsdevcmd_proxy.bat  win10sdk_version.bat  windows_version.bat
install/Windows/backup/: copy_omp.txt  export.bat  find.bat  find_vsdevcmd.bat  find_vsdevcmd.txt  findf.bat  mk.bat  mk_clean.bat  mk_config.bat  mk_make.bat  mk_reconfig.bat  mk_refresh.bat  mk_remake.bat  winsdk_version.bat
install/macOS/: install
install/macOS/backup/: mk  mk_config  mk_refresh
integration/vs/: CMakeSettings.json
integration/vs2017/: CMakeSettings.json
integration/vs2019/: CMakeSettings.json
macOS/: build.sh  install  install.sh  make.sh  mk  mk_build  mk_clean  mk_config  mk_make  mk_reconfig  mk_remake
manual/: CMAKELISTS.md  CMAKEMODULE.md  COMMANDS.md  CROSSCOMPILE.md  INSTALLATION.md  INTEGRATION.md  MANUAL.md  TROUBLESHOOTING.md
src/: CMakeLists.txt  argh.h  llvm-rc-rc.cpp  mk.cmake  mk.cpp  mk_status.txt
src/integration/vs/: CMakeSettings.json
src/integration/vsc/: c_cpp_properties.json
visual studio/: CMakeSettings.json
visual studio code/: c_cpp_properties.json
